hphp/test/slow/type_assertions/param-self.php.expectf

Fatal error: Declaration of R::foo() must be compatible with that of X::foo() in %s/param-self.php on line 15
